Added Remainder Date countdown functionality

--- a/ProjectTWO/index.html
+++ b/ProjectTWO/index.html
@@ -19,34 +19,36 @@
             <h3>YourLogo</h3>
         </div>
 
-        <!-- Heading Section -->
-         <div class="heading">
+        <!-- Heading Section --> 
+         <div class="heading" id="heading">
             <h1 id="soon">Coming Soon</h1>
             <p>We're launching something new. Stay tuned.</p>
          </div>
 
 
          <!-- Lunching day,  time  section -->
-          <div class="launching-info">
+
+         <div class="launching-info">
             <div id="days" class="info">
-                <p class="detail-num">10</p>
+                <p id="days-data" class="detail-num days">-</p>
                 <p class="detail-text">Days</p>
             </div>
             <div id="hours" class="info">
-                <p class="detail-num">12</p>
+                <p id="hours-data" class="detail-num hours">-</p>
                 <p class="detail-text">Hours</p>
             </div>
             <div id="minutes" class="info">
-                <p class="detail-num">45</p>
+                <p id="minutes-data" class="detail-num minutes">-</p>
                 <p class="detail-text">Minutes</p>
             </div>
             <div id="seconds" class="info">
-                <p class="detail-num">30</p>
+                <p id="seconds-data" class="detail-num seconds">-</p>
                 <p class="detail-text">Seconds</p>
             </div>
           </div>
+         
 
-          <div class="contact-info">
+          <div class="contact-info" id="contact-info">
             <input type="email" name="email" id="email" placeholder="Enter your email" required>
             <button>Notify Me</button>
           </div>
@@ -55,5 +57,7 @@
             <p>&copy; 2025 Aayush. All rights reserved.</p>
           </div>
      </div>
+
+     <script src="./script.js"></script>
 </body>
 </html>
